--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
     <!-- Meta -->
-    <title>Goose Finance</title>
+    <title>X Finance</title>
     <meta
       name="description"
       content="Flip EGG, and stake them with Goose Finance, the best decentralized exchange on Binance Smart Chain.y"
@@ -22,7 +22,7 @@
     <meta name="twitter:image" content="https://goosedefi.com/images/egg/hero.png" />
     <meta name="twitter:description" content="Farm the native coin of Goose Finance with Goose Finance FLP Token" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="🥚 Goose Finance - A next evolution DeFi exchange on Binance Smart Chan (BSC)" />
+    <meta name="twitter:title" content="X Finance - A next evolution DeFi exchange on Binance Smart Chan (BSC)" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
